Following page: Fix overflow and borders

--- a/github-dark.css
+++ b/github-dark.css
@@ -22,12 +22,15 @@
  .vcard-fullname, .vcard-username {
   overflow-y: hidden;
  }
- /* remove unnecessary text truncation (except in news feed) */
+ /* remove unnecessary text truncation (except in news feed and on following pages) */
  .css-truncate {
   max-width: 100% !important;
  }
  .news .css-truncate {
   max-width: 180px !important; /* default setting */
+ }
+ .follow-list .css-truncate {
+  max-width: 195px !important; /* default setting */
  }
 
  /* === logo === */
@@ -136,7 +139,7 @@
  .commit-group-item .gobutton .comment-count,.gobutton.with-comments .sha {
   border-color: #555 !important;
  }
- .summary-stats,.sunken-menu-separator, .pagehead.repohead {
+ .summary-stats,.sunken-menu-separator, .pagehead.repohead, .follow-list .follow-list-item  {
   border-bottom: #333 1px solid !important;
  }
  .pagination a:first-child,.pagination a:last-child,.pagination span:first-child,.pagination span:last-child,
